finished home page

--- a/index.html
+++ b/index.html
@@ -142,13 +142,15 @@
       </section>
     </main>
 
-    <footer class="bg-primary padding-y-lg">
-      <div class="wrapper split">
-        <div>
-          <p>TIMINI</p>
-          <p>HOTEL</p>
-
+    <footer class="footer bg-primary padding-y-lg">
+      <div class="wrapper">
+        <div class="flow">
           <div>
+            <h3>TIMINI</h3>
+            <p>HOTEL</p>
+          </div>
+
+          <div class="">
             <p>Segou</p>
             <p>+76451100</p>
             <p>timinihotel@gmail.com</p>
@@ -156,7 +158,7 @@
         </div>
 
         <nav>
-          <ul>
+          <ul class="flow">
             <li>
               <a href="/a-propos">A propos de nous</a>
             </li>
@@ -169,20 +171,20 @@
           </ul>
         </nav>
 
-        <ul>
-          <li>
+        <ul class="flow">
+          <li class="cluster">
             <img src="assets/images/fb.png" alt="" />
-            <p>Facebook</p>
+            <span>Facebook</span>
           </li>
-          <li>
+          <li class="cluster">
             <img src="assets/images/tw.png" alt="" />
-            <p>Twitter</p>
+            <span>Twitter</span>
           </li>
         </ul>
 
-        <div>
+        <div class="flow">
           <p>Abonnez-vous à notre newsletter</p>
-          <div>
+          <div class="form">
             <input type="text" placeholder="Address Email" />
             <button class="btn">OK</button>
           </div>
