finished facilities page

--- a/installations.html
+++ b/installations.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Timini Hotel</title>
+    <title>Timini Hotel | Installations</title>
   </head>
   <body>
-    <div class="bg-page-home">
+    <div class="bg-page-facilities">
       <div class="overlay"></div>
       <header class="site-header">
         <div class="wrapper cluster jc-sb">
@@ -60,50 +60,39 @@
     </div>
 
     <main>
-      <div class="wrapper padding-y-lg">
-        <p class="text-center">
-          Choisissez une chambre et profitez d’un séjour comme chez vous.
-        </p>
-      </div>
-
       <section class="padding-y-lg">
-        <div class="wrapper split">
-          <div class="content flow">
-            <h2>Le luxe redéfini</h2>
-            <p>
-              Nos chambres sont conçues pour vous plonger dans un environnement
-              dédié à la détente. Évadez-vous du quotidien et découvrez votre
-              propre havre de paix.
-            </p>
-            <a href="chambres.html" class="btn">EXPLORER</a>
-          </div>
-          <div>
-            <img
-              src="assets/images/room1.png"
-              alt="Une Chambre de TIMINI HOTEL"
-            />
-          </div>
-        </div>
-      </section>
+        <div class="wrapper flow text-center">
+          <h2>Installations</h2>
+          <p>
+            Nous souhaitons que votre séjour dans notre hôtel luxuriant soit
+            véritablement inoubliable. C'est pourquoi nous accordons une
+            attention particulière à tous vos besoins afin de vous garantir une
+            expérience tout à fait unique. Nos hôtels de luxe offrent un cadre
+            parfait avec des vues à couper le souffle pour la détente, et nos
+            installations modernes et luxueuses vous aideront à profiter
+            pleinement de chaque instant.
+          </p>
 
-      <section class="padding-y-lg">
-        <div class="wrapper split">
-          <div class="content flow">
-            <h2>Laissez vos soucis au bord de l’eau.</h2>
-            <p>
-              Nous adorons la vie au bord de la piscine. Se détendre près de
-              l’eau cristalline et profiter de moments de calme garantit une
-              sérénité absolue. Chaque instant au bord de la piscine semble hors
-              du temps.
-            </p>
-            <a href="chambres.html" class="btn">EXPLORER</a>
-          </div>
-          <div>
-            <img
-              src="assets/images/pool1.png"
-              alt="La pisicine de TIMINI HOTEL"
-            />
-          </div>
+          <ul class="facilities">
+            <li class="">
+              <img src="assets/images/facilities/01.png" alt="Installation" />
+            </li>
+            <li class="">
+              <img src="assets/images/facilities/02.png" alt="Installation" />
+            </li>
+            <li class="">
+              <img src="assets/images/facilities/03.png" alt="Installation" />
+            </li>
+            <li class="">
+              <img src="assets/images/facilities/04.png" alt="Installation" />
+            </li>
+            <li class="">
+              <img src="assets/images/facilities/05.png" alt="Installation" />
+            </li>
+            <li class="">
+              <img src="assets/images/facilities/06.png" alt="Installation" />
+            </li>
+          </ul>
         </div>
       </section>
 
