--- a/chambres.html
+++ b/chambres.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Timini Hotel</title>
+    <title>Timini Hotel | Installations</title>
   </head>
   <body>
-    <div class="bg-page-home">
+    <div class="bg-page-rooms">
       <div class="overlay"></div>
       <header class="site-header">
         <div class="wrapper cluster jc-sb">
@@ -60,50 +60,40 @@
     </div>
 
     <main>
-      <div class="wrapper padding-y-lg">
-        <p class="text-center">
-          Choisissez une chambre et profitez d’un séjour comme chez vous.
-        </p>
-      </div>
-
       <section class="padding-y-lg">
-        <div class="wrapper split">
-          <div class="content flow">
-            <h2>Le luxe redéfini</h2>
-            <p>
-              Nos chambres sont conçues pour vous plonger dans un environnement
-              dédié à la détente. Évadez-vous du quotidien et découvrez votre
-              propre havre de paix.
-            </p>
-            <a href="chambres.html" class="btn">EXPLORER</a>
-          </div>
-          <div>
-            <img
-              src="assets/images/room1.png"
-              alt="Une Chambre de TIMINI HOTEL"
-            />
-          </div>
-        </div>
-      </section>
+        <div class="wrapper flow text-center">
+          <h2>CHAMBRES ET TARIFS</h2>
+          <p>
+            Chacune de nos chambres lumineuses et baignées de lumière est
+            équipée de tout ce dont vous pourriez avoir besoin pour un séjour
+            confortable. Et oui, le confort n'est pas notre seul objectif : nous
+            accordons également une grande importance au design soigné, avec un
+            mobilier contemporain élégant, complété par les riches tons de la
+            palette naturelle visibles depuis les fenêtres et terrasses de nos
+            chambres
+          </p>
 
-      <section class="padding-y-lg">
-        <div class="wrapper split">
-          <div class="content flow">
-            <h2>Laissez vos soucis au bord de l’eau.</h2>
-            <p>
-              Nous adorons la vie au bord de la piscine. Se détendre près de
-              l’eau cristalline et profiter de moments de calme garantit une
-              sérénité absolue. Chaque instant au bord de la piscine semble hors
-              du temps.
-            </p>
-            <a href="chambres.html" class="btn">EXPLORER</a>
-          </div>
-          <div>
-            <img
-              src="assets/images/pool1.png"
-              alt="La pisicine de TIMINI HOTEL"
-            />
-          </div>
+          <ul class="rooms">
+            <li class="padding-y-lg">
+              <div class="room">
+                <img src="assets/images/rooms/01.png" alt="" />
+                <h2 class="name">CHAMBRE SIMPLE</h2>
+                <div class="details-container">
+                  <div class="cluster jc-sb">
+                    <div><span>Voir les détails</span></div>
+                    <div class="btn">100€ /nuit</div>
+                  </div>
+                  <p class="details">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Maiores assumenda, aut repellat eos dignissimos nulla, ipsa
+                    ratione laborum repellendus quos modi labore harum aliquam
+                    fugiat similique voluptates perferendis asperiores
+                    provident?
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
