finished contact page

--- a/installations.html
+++ b/installations.html
@@ -64,7 +64,7 @@
         <div class="wrapper flow text-center">
           <h2>Installations</h2>
           <p>
-            Nous souhaitons que votre séjour dans notre hôtel luxuriant soit
+            Nous souhaitons que votre séjour dans notre hôtel TIMINI soit
             véritablement inoubliable. C'est pourquoi nous accordons une
             attention particulière à tous vos besoins afin de vous garantir une
             expérience tout à fait unique. Nos hôtels de luxe offrent un cadre
